--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,38 @@
 # Dependencies
 markdown:         redcarpet
+redcarpet:
+  extensions: ["tables"]
+
 pygments:         true
 
 # Permalinks
 permalink:        pretty
 
 # Setup
-title:            Poole
-tagline:          The Jekyll Butler
-url:              http://getpoole.com
-paginate:         1
-baseurl:          /
+title:            Tushant Sharma
+tagline:          'Electronics, Consulting, Blogging, Tweets, Football'
+url:              http://www.tushantsharma.com
+shorturl:         tushantsharma.com
+
 author:
-  name:           Tushant Sharma
+  name:           'Tushant Sharma'
   url:            https://twitter.com/SharmaTushant
-  email:          sharma.tushant@gmail.com
+
+paginate:         1
 
 # Custom vars
 version:          1.0.0
+
 github:
-  repo:           https://github.com/poole/poole
+  repo:           github.com/Jadax/jadax.github.io
+
+# This is the list of pages to incldue in the header of the website.
+pages_list:       
+  About: '/about/'
+  Archive: '/archive/'
+  Feed: '/atom.xml'
+
+# Allow URL Redirects: 
+#  * https://help.github.com/articles/redirects-on-github-pages
+gems:
+  - jekyll-redirect-from
