--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 # Dependencies
 markdown:         redcarpet
-redcarpet:
-  extensions: ["tables"]
-
 pygments:         true
 
 # Permalinks
@@ -13,19 +10,17 @@ title:            Tushant Sharma
 tagline:          'Electronics, Consulting, Blogging, Tweets, Football'
 url:              http://www.tushantsharma.com
 shorturl:         tushantsharma.com
-
-author:
-  name:           'Tushant Sharma'
-  url:            https://twitter.com/SharmaTushant
-
 paginate:         1
+baseurl:          /
+author:
+  name:           Tushant Sharma
+  url:            https://twitter.com/SharmaTushant
+  email:          sharma.tushant@gmail.com
 
 # Custom vars
 version:          1.0.0
-
 github:
-  repo:           github.com/Jadax/jadax.github.io
-
+  repo:           https://github.com/Jadax/jadax.github.io
 # This is the list of pages to incldue in the header of the website.
 pages_list:       
   About: '/about/'
