--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,9 @@ github:
   repo:           https://github.com/Jadax/jadax.github.io
 # This is the list of pages to incldue in the header of the website.
 pages_list:       
-  About: '/about/'
-  Archive: '/archive/'
+  About Me: '/about/'
+  Academic Profile: '/academic/'
+  Archives: '/archive/'
   Feed: '/atom.xml'
 
 # Allow URL Redirects: 
