--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   url:            https://twitter.com/SharmaTushant
   email:          sharma.tushant@gmail.com
 
-disqus_short_name: leostatic
+disqus_short_name: Jadax
 disqus_show_comment_count: false
 
   
@@ -29,6 +29,11 @@ version:          1.0.0
 github:
   repo:           https://github.com/Jadax/jadax.github.io
 
+# This is the list of pages to incldue in the header of the website.
+pages_list:       
+  About: '/about/'
+  Archive: '/archive/'
+  Feed: '/atom.xml'
 # Allow URL Redirects: 
 #  * https://help.github.com/articles/redirects-on-github-pages
 gems:
