--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,10 @@ github:
 
 # This is the list of pages to incldue in the header of the website.
 pages_list:       
-  Blog: '/blog/'
+  Blog: '/archive/'
   About: '/about/'
   Academic: '/academic/'
   Projects: '/projects/'
-  Archive: '/archive/'
   Feed: '/atom.xml'
 
 # Allow URL Redirects: 
