--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,20 @@
-# Dependencies
-markdown:         redcarpet
-pygments:         true
+markdown: rdiscount
+pygments: true
+permalink: /archive/:year/:title.html
+rdiscount:
+  extensions: [smart]
 
-# Permalinks
-permalink:        pretty
+name: Tushant Sharma
+url: http://www.tushantsharma.com
+description: Electrical engineer, Electronics enthusiast, Blogger, Tweeter, Footballer
+twitter: SharmaTushant
+github: Jadax
+gravatar_url: http://www.gravatar.com/avatar/930e638d1fddb2f7e193798875dc7489
 
-# Setup
-title:            Tushant Sharma
-tagline:          'Electronics, Consulting, Blogging, Tweets, Football'
-url:              http://www.tushantsharma.com
-shorturl:         tushantsharma.com
-paginate:         1
-baseurl:          /
-author:
-  name:           Tushant Sharma
-  url:            https://twitter.com/SharmaTushant
-  email:          sharma.tushant@gmail.com
+disqus_short_name: Jadax
+disqus_show_comment_count: false
 
-# Custom vars
-version:          1.0.0
-github:
-  repo:           https://github.com/Jadax/jadax.github.io
-# This is the list of pages to incldue in the header of the website.
-pages_list:
-  Blog: '/archive/'
-  About: '/about/'  
-  Academic: '/academic/'
-  Projects: '/projects/'
-  Feed: '/atom.xml'
+googleplus_user: 110638987392974757846
+googleplus_hidden: false
 
-# Allow URL Redirects: 
-#  * https://help.github.com/articles/redirects-on-github-pages
-gems:
-  - jekyll-redirect-from
+google_analytics_tracking_id: UA-51514707-1
