--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,13 @@ twitter: SharmaTushant
 github: Jadax
 gravatar_url: http://www.gravatar.com/avatar/930e638d1fddb2f7e193798875dc7489
 
+pages_list:       
+  Blog: 'archive/'
+  About: '/about/'
+  Academic: '/academic/'
+  Projects: '/projects/'
+  Feed: '/atom.xml'
+
 disqus_short_name: Jadax
 disqus_show_comment_count: false
 
