--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,6 @@ twitter: SharmaTushant
 github: Jadax
 gravatar_url: http://www.gravatar.com/avatar/930e638d1fddb2f7e193798875dc7489
 
-pages_list:       
-  Blog: '/archive/'
-  About: '/about/'
-  Academic: '/academic/'
-  Projects: '/projects/'
-  Feed: '/atom.xml'
-
 disqus_short_name: Jadax
 disqus_show_comment_count: false
 
@@ -25,3 +18,16 @@ googleplus_user: 110638987392974757846
 googleplus_hidden: false
 
 google_analytics_tracking_id: UA-51514707-1
+
+# This is the list of pages to incldue in the header of the website.
+pages_list:       
+  Blog: '/archive/'
+  About: '/about/'
+  Academic: '/academic/'
+  Projects: '/projects/'
+  Feed: '/atom.xml'
+  
+# Allow URL Redirects: 
+#  * https://help.github.com/articles/redirects-on-github-pages
+gems:
+  - jekyll-redirect-from
