--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,39 @@
-markdown: rdiscount
-pygments: true
-permalink: /archive/:year/:title.html
-rdiscount:
-  extensions: [smart]
+# Dependencies
+markdown:         redcarpet
+redcarpet:
+  extensions: ["tables"]
 
-name: Tushant Sharma
-url: http://www.tushantsharma.com
-description: Electrical engineer, Electronics enthusiast, Blogger, Tweeter, Footballer
-twitter: SharmaTushant
-github: Jadax
-gravatar_url: http://www.gravatar.com/avatar/930e638d1fddb2f7e193798875dc7489
+pygments:         true
 
-disqus_short_name: Jadax
-disqus_show_comment_count: false
+# Permalinks
+permalink:        pretty
 
-googleplus_user: 110638987392974757846
-googleplus_hidden: false
+# Setup
+title:            Tushant Sharma
+tagline:          'Electrical engineer. Electronics enthusiast. Blogger. Tweeter. Footballer.'
+url:              http://www.tushantsharma.com
+shorturl:         tushantsharma.com
 
-google_analytics_tracking_id: UA-51514707-1
+author:
+  name:           'Tushant Sharma'
+  url:            https://twitter.com/SharmaTushant
+
+paginate:         1
+
+# Custom vars
+version:          1.0.0
+
+github:
+  repo:           https://github.com/Jadax/jadax.github.io
 
 # This is the list of pages to incldue in the header of the website.
 pages_list:       
-  Blog: '/archive/'
   About: '/about/'
+  Blog: '/archive/'
   Academic: '/academic/'
   Projects: '/projects/'
   Feed: '/atom.xml'
-  
+
 # Allow URL Redirects: 
 #  * https://help.github.com/articles/redirects-on-github-pages
 gems:
